2012-08-16  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14481
	* ar.exp (bfdtest1): New.
	(long_filenames): Run bfdtest1.
	(thin_archive): Likewise.
	(thin_archive_with_nested): Likewise.

2012-08-13  Ian Bolton  <ian.bolton@arm.com>
            Laurent Desnogues  <laurent.desnogues@arm.com>
            Jim MacArthur  <jim.macarthur@arm.com>
            Marcus Shawcroft  <marcus.shawcroft@arm.com>
            Nigel Stephens  <nigel.stephens@arm.com>
            Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
            Richard Earnshaw  <rearnsha@arm.com>
            Sofiane Naci  <sofiane.naci@arm.com>
            Tejas Belagod  <tejas.belagod@arm.com>
            Yufeng Zhang  <yufeng.zhang@arm.com>

	* objdump.exp: Add AArch64.

2012-08-02  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14420
	* binutils-all/i386/compressed-1a.d: Updated.
	* binutils-all/objdump.W: Likewise.
	* binutils-all/readelf.wa: Likewise.
	* binutils-all/x86-64/compressed-1a.d: Likewise.

2012-07-28  Kai Tietz  <ktietz@redhat.com>

	* binutils-all/windres/version_small.rc: New test.
	* binutils-all/windres/version_small.rsd: Likewise.

2012-07-03  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14319
	* binutils-all/compress.exp: Test compress empty debug sections.

	* binutils-all/dw2-empty.S: New file.

2012-06-07  Thomas Schwinge  <thomas@codesourcery.com>

	* binutils-all/i386/i386.exp: Don't skip for x86_64-*-linux*.

2012-05-17  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/hppa/objdump.exp: Expect addend as signed.

2012-05-17  Alan Modra  <amodra@gmail.com>

	* binutils-all/objdump.W: Update.
	* binutils-all/readelf.wa: Update.
	* binutils-all/i386/compressed-1a.d: Update.
	* binutils-all/x86-64/compressed-1a.d: Update.

2012-05-16  Meador Inge  <meadori@codesourcery.com>

	* binutils-all/arm/objdump.exp:
	STMFD/LDMIA sp!, {reg} don't disassemble to PUSH/POP {reg} any longer.

2012-04-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/13947