@@ -1,4 +1,4 @@
-#   Copyright 1995, 1997, 2002, 2004, 2007, 2008, 2009, 2010
+#   Copyright 1995, 1997, 2002, 2004, 2007, 2008, 2009, 2010, 2012
 #   Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
@@ -118,7 +118,6 @@ proc long_filenames { } {
 	remote_file host delete $file2
     }
 
-    verbose -log "$AR x $dest"
     set exec_output [binutils_run $AR "x $dest"]
     set exec_output [prune_warnings $exec_output]
     if ![string match "" $exec_output] {
@@ -127,7 +126,6 @@ proc long_filenames { } {
 	return
     }
 
-    verbose -log "$bfdtest1 $dest"
     set exec_output [binutils_run $bfdtest1 "$dest"]
     if ![string match "" $exec_output] {
 	verbose -log $exec_output
@@ -261,7 +259,6 @@ proc thin_archive { } {
 	return
     }
 
-    verbose -log "$bfdtest1 $archive"
     set exec_output [binutils_run $bfdtest1 "$archive"]
     if ![string match "" $exec_output] {
 	verbose -log $exec_output
@@ -327,8 +324,14 @@ proc thin_archive_with_nested { } {
 	return
     }
 
-    verbose -log "$bfdtest1 $archive"
     set exec_output [binutils_run $bfdtest1 "$archive"]
+    if ![string match "" $exec_output] {
+	verbose -log $exec_output
+	fail "$testname (bfdtest1)"
+	return
+    }
+
+    set exec_output [binutils_run $bfdtest1 "$archive2"]
     if ![string match "" $exec_output] {
 	verbose -log $exec_output
 	fail "$testname (bfdtest1)"
